@@ -3,6 +3,7 @@
     o subjectProfile[Interval|Line|Event]Plot: alpha parameter
     o createSubjectProfileReport: suppress warnings Sweave
     o prepareSubjectProfile: remove message: 'scale already present'
+    o vignette: more extensive example timeAlign/timeAlignPerSubject
 0.9.2
     o createSubjectProfileReport: set knitr environment (to be used within rmd doc)
     o export convertAesVar
